// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SectionList /> should render a section list with a titled section without props 1`] = `
@media only screen and (min-width:640px) {
  .c1 {
    border-bottom: 1px solid #E1E6EB;
  }

  .c1:last-child {
    border-bottom: 0;
  }
}

@media only screen and (min-width:640px) {
  .c0 {
    margin-left: 24px;
    margin-right: 24px;
    padding-top: 32px;
    padding-bottom: 32px;
  }
}

@media only screen and (max-width:639px) {
  .c2 {
    padding: 24px 16px 12px;
  }
}

@media only screen and (max-width:639px) {
  .c3 {
    padding-bottom: 12px;
  }
}

@media only screen and (min-width:640px) {
  .c3 {
    margin-right: 24px;
  }
}

@media only screen and (min-width:640px) {
  .c4 {
    padding-top: 1.5rem;
  }
}

@media only screen and (max-width:639px) {
  .c4 {
    background-color: #FAFBFC;
    border-top: 1px solid #E1E6EB;
    border-bottom: 1px solid #E1E6EB;
    padding: 24px 16px;
  }
}

<SectionList>
  <div>
    <TitledSection>
      <Styled(styled.div)>
        <styled.div
          className="c0"
        >
          <div
            className="c0 c1"
          >
            <XYGrid
              gutterMarginX={false}
              gutterMarginY={false}
              gutterPaddingX={false}
              gutterPaddingY={false}
              vertical={false}
            >
              <div
                className="ihrGridX"
              >
                <Cell
                  size={
                    Object {
                      "min": 12,
                    }
                  }
                >
                  <div
                    className="ihrCell min-12"
                  >
                    <styled.div>
                      <div
                        className="c2"
                      >
                        <XYGrid
                          gutterMarginX={false}
                          gutterMarginY={false}
                          gutterPaddingX={false}
                          gutterPaddingY={false}
                          vertical={false}
                          verticalAlignment="middle"
                        >
                          <div
                            className="ihrGridX align-middle"
                          >
                            <Cell
                              size={
                                Object {
                                  "desktop": "auto",
                                  "min": 12,
                                  "tablet": "auto",
                                }
                              }
                            >
                              <div
                                className="ihrCell desktop-auto tablet-auto min-12"
                              >
                                <Styled(SectionDescription)>
                                  <SectionDescription
                                    className="c3"
                                  >
                                    <div
                                      className="c3"
                                    />
                                  </SectionDescription>
                                </Styled(SectionDescription)>
                              </div>
                            </Cell>
                            <Cell
                              size={
                                Object {
                                  "desktop": "shrink",
                                  "min": 12,
                                  "tablet": "shrink",
                                }
                              }
                            >
                              <div
                                className="ihrCell desktop-shrink tablet-shrink min-12"
                              />
                            </Cell>
                          </div>
                        </XYGrid>
                      </div>
                    </styled.div>
                  </div>
                </Cell>
                <Cell
                  size={
                    Object {
                      "min": 12,
                    }
                  }
                >
                  <div
                    className="ihrCell min-12"
                  >
                    <StyledTitledSectionBody>
                      <div
                        className="c4"
                      >
                        section 1
                      </div>
                    </StyledTitledSectionBody>
                  </div>
                </Cell>
              </div>
            </XYGrid>
          </div>
        </styled.div>
      </Styled(styled.div)>
    </TitledSection>
  </div>
</SectionList>
`;

exports[`<SectionList /> should render a section list with an annotated section without props 1`] = `
@media only screen and (min-width:640px) {
  .c1 {
    border-bottom: 1px solid #E1E6EB;
  }

  .c1:last-child {
    border-bottom: 0;
  }
}

@media only screen and (max-width:639px) {
  .c0 {
    padding: 24px 16px;
  }
}

@media only screen and (min-width:640px) {
  .c0 {
    margin-left: 24px;
    margin-right: 24px;
    padding-top: 32px;
    padding-bottom: 32px;
  }
}

@media only screen and (min-width:640px) {
  .c4 {
    margin-left: 24px;
  }
}

@media only screen and (max-width:639px) {
  .c4 {
    background-color: #FAFBFC;
    border-top: 1px solid #E1E6EB;
    border-bottom: 1px solid #E1E6EB;
    padding: 24px 16px;
  }
}

@media only screen and (max-width:639px) {
  .c3 {
    padding: 24px 16px;
  }
}

@media only screen and (min-width:640px) {
  .c3 {
    margin-right: 24px;
  }
}

@media only screen and (min-width:640px) {
  .c2 {
    margin-left: 24px;
    margin-right: 24px;
    padding-top: 32px;
    padding-bottom: 32px;
  }
}

<SectionList>
  <div>
    <Styled(styled.div)>
      <styled.div
        className="c0"
      >
        <div
          className="c0 c1"
        >
          section 1
        </div>
      </styled.div>
    </Styled(styled.div)>
    <AnnotatedSection>
      <Styled(styled.div)>
        <styled.div
          className="c2"
        >
          <div
            className="c2 c1"
          >
            <XYGrid
              gutterMarginX={false}
              gutterMarginY={false}
              gutterPaddingX={false}
              gutterPaddingY={false}
              vertical={false}
            >
              <div
                className="ihrGridX"
              >
                <Cell
                  size={
                    Object {
                      "desktop": 4,
                      "min": 12,
                      "tablet": 4,
                    }
                  }
                >
                  <div
                    className="ihrCell desktop-4 tablet-4 min-12"
                  >
                    <Styled(SectionDescription)>
                      <SectionDescription
                        className="c3"
                      >
                        <div
                          className="c3"
                        />
                      </SectionDescription>
                    </Styled(SectionDescription)>
                  </div>
                </Cell>
                <Cell
                  size={
                    Object {
                      "desktop": 8,
                      "min": 12,
                      "tablet": 8,
                    }
                  }
                >
                  <div
                    className="ihrCell desktop-8 tablet-8 min-12"
                  >
                    <StyledAnnotatedSectionBody>
                      <div
                        className="c4"
                      >
                        section 2
                      </div>
                    </StyledAnnotatedSectionBody>
                  </div>
                </Cell>
              </div>
            </XYGrid>
          </div>
        </styled.div>
      </Styled(styled.div)>
    </AnnotatedSection>
  </div>
</SectionList>
`;

exports[`<SectionList /> should render a sectionList 1`] = `
.c6 {
  -webkit-transition: color .25s ease-out;
  transition: color .25s ease-out;
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c6,
.c6:link,
.c6:visited {
  color: #432DF3;
}

.c6:hover {
  color: #2512B3;
}

.c6:active {
  color: #0F0080;
}

.c4 {
  font-size: 18px;
  line-height: 24px;
  -webkit-letter-spacing: -.02em;
  -moz-letter-spacing: -.02em;
  -ms-letter-spacing: -.02em;
  letter-spacing: -.02em;
  color: #424F5C;
  font-weight: 600;
}

.c5 {
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #667380;
  font-weight: 400;
  display: block;
}

.c11 {
  font-size: 18px;
  line-height: 24px;
  -webkit-letter-spacing: -.02em;
  -moz-letter-spacing: -.02em;
  -ms-letter-spacing: -.02em;
  letter-spacing: -.02em;
  color: #424F5C;
  font-weight: 600;
}

.c12 {
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #667380;
  font-weight: 400;
  display: block;
}

@media only screen and (min-width:640px) {
  .c1 {
    border-bottom: 1px solid #E1E6EB;
  }

  .c1:last-child {
    border-bottom: 0;
  }
}

@media only screen and (max-width:639px) {
  .c0 {
    padding: 24px 16px;
  }
}

@media only screen and (min-width:640px) {
  .c0 {
    margin-left: 24px;
    margin-right: 24px;
    padding-top: 32px;
    padding-bottom: 32px;
  }
}

@media only screen and (min-width:640px) {
  .c7 {
    margin-left: 24px;
  }
}

@media only screen and (max-width:639px) {
  .c7 {
    background-color: #FAFBFC;
    border-top: 1px solid #E1E6EB;
    border-bottom: 1px solid #E1E6EB;
    padding: 24px 16px;
  }
}

@media only screen and (max-width:639px) {
  .c3 {
    padding: 24px 16px;
  }
}

@media only screen and (min-width:640px) {
  .c3 {
    margin-right: 24px;
  }
}

@media only screen and (min-width:640px) {
  .c2 {
    margin-left: 24px;
    margin-right: 24px;
    padding-top: 32px;
    padding-bottom: 32px;
  }
}

@media only screen and (min-width:640px) {
  .c8 {
    margin-left: 24px;
    margin-right: 24px;
    padding-top: 32px;
    padding-bottom: 32px;
  }
}

@media only screen and (max-width:639px) {
  .c9 {
    padding: 24px 16px 12px;
  }
}

@media only screen and (max-width:639px) {
  .c10 {
    padding-bottom: 12px;
  }
}

@media only screen and (min-width:640px) {
  .c10 {
    margin-right: 24px;
  }
}

@media only screen and (min-width:640px) {
  .c13 {
    padding-top: 1.5rem;
  }
}

@media only screen and (max-width:639px) {
  .c13 {
    background-color: #FAFBFC;
    border-top: 1px solid #E1E6EB;
    border-bottom: 1px solid #E1E6EB;
    padding: 24px 16px;
  }
}

<SectionList>
  <div>
    <Styled(styled.div)>
      <styled.div
        className="c0"
      >
        <div
          className="c0 c1"
        >
          section 1
        </div>
      </styled.div>
    </Styled(styled.div)>
    <AnnotatedSection
      description="Annotated Description"
      header="Annotated Section"
      linkProps={
        Object {
          "href": "#",
        }
      }
      linkText="Annotated Link"
    >
      <Styled(styled.div)>
        <styled.div
          className="c2"
        >
          <div
            className="c2 c1"
          >
            <XYGrid
              gutterMarginX={false}
              gutterMarginY={false}
              gutterPaddingX={false}
              gutterPaddingY={false}
              vertical={false}
            >
              <div
                className="ihrGridX"
              >
                <Cell
                  size={
                    Object {
                      "desktop": 4,
                      "min": 12,
                      "tablet": 4,
                    }
                  }
                >
                  <div
                    className="ihrCell desktop-4 tablet-4 min-12"
                  >
                    <Styled(SectionDescription)
                      description="Annotated Description"
                      header="Annotated Section"
                      linkProps={
                        Object {
                          "href": "#",
                        }
                      }
                      linkText="Annotated Link"
                    >
                      <SectionDescription
                        className="c3"
                        description="Annotated Description"
                        header="Annotated Section"
                        linkProps={
                          Object {
                            "href": "#",
                          }
                        }
                        linkText="Annotated Link"
                      >
                        <div
                          className="c3"
                        >
                          <Text
                            color="#424F5C"
                            isInline={true}
                            tag="h2"
                            type="heading"
                          >
                            <styled.h2
                              color="#424F5C"
                              isInline={true}
                              textType="heading"
                            >
                              <h2
                                className="c4"
                                color="#424F5C"
                              >
                                Annotated Section
                              </h2>
                            </styled.h2>
                          </Text>
                          <Text
                            color="#667380"
                            isInline={false}
                            tag="span"
                            type="small"
                          >
                            <styled.span
                              color="#667380"
                              isInline={false}
                              textType="small"
                            >
                              <span
                                className="c5"
                                color="#667380"
                              >
                                Annotated Description
                              </span>
                            </styled.span>
                          </Text>
                          <TextLink
                            href="#"
                            textType="small"
                          >
                            <Component
                              className="c6"
                              href="#"
                              textType="small"
                            >
                              <Anchor
                                className="c6"
                                href="#"
                              >
                                <a
                                  className="c6"
                                  href="#"
                                >
                                  Annotated Link
                                </a>
                              </Anchor>
                            </Component>
                          </TextLink>
                        </div>
                      </SectionDescription>
                    </Styled(SectionDescription)>
                  </div>
                </Cell>
                <Cell
                  size={
                    Object {
                      "desktop": 8,
                      "min": 12,
                      "tablet": 8,
                    }
                  }
                >
                  <div
                    className="ihrCell desktop-8 tablet-8 min-12"
                  >
                    <StyledAnnotatedSectionBody>
                      <div
                        className="c7"
                      >
                        section 2
                      </div>
                    </StyledAnnotatedSectionBody>
                  </div>
                </Cell>
              </div>
            </XYGrid>
          </div>
        </styled.div>
      </Styled(styled.div)>
    </AnnotatedSection>
    <TitledSection
      actionItems={
        Array [
          <Button
            hasLegacyMargins={false}
            iconAlignment="left"
            type="primary"
          >
            Action 1
          </Button>,
          <Button
            hasLegacyMargins={false}
            iconAlignment="left"
            type="primary"
          >
            Action 2
          </Button>,
        ]
      }
      description="Titled Description"
      header="Titled Section"
    >
      <Styled(styled.div)>
        <styled.div
          className="c8"
        >
          <div
            className="c8 c1"
          >
            <XYGrid
              gutterMarginX={false}
              gutterMarginY={false}
              gutterPaddingX={false}
              gutterPaddingY={false}
              vertical={false}
            >
              <div
                className="ihrGridX"
              >
                <Cell
                  size={
                    Object {
                      "min": 12,
                    }
                  }
                >
                  <div
                    className="ihrCell min-12"
                  >
                    <styled.div>
                      <div
                        className="c9"
                      >
                        <XYGrid
                          gutterMarginX={false}
                          gutterMarginY={false}
                          gutterPaddingX={false}
                          gutterPaddingY={false}
                          vertical={false}
                          verticalAlignment="middle"
                        >
                          <div
                            className="ihrGridX align-middle"
                          >
                            <Cell
                              size={
                                Object {
                                  "desktop": "auto",
                                  "min": 12,
                                  "tablet": "auto",
                                }
                              }
                            >
                              <div
                                className="ihrCell desktop-auto tablet-auto min-12"
                              >
                                <Styled(SectionDescription)
                                  description="Titled Description"
                                  header="Titled Section"
                                >
                                  <SectionDescription
                                    className="c10"
                                    description="Titled Description"
                                    header="Titled Section"
                                  >
                                    <div
                                      className="c10"
                                    >
                                      <Text
                                        color="#424F5C"
                                        isInline={true}
                                        tag="h2"
                                        type="heading"
                                      >
                                        <styled.h2
                                          color="#424F5C"
                                          isInline={true}
                                          textType="heading"
                                        >
                                          <h2
                                            className="c11"
                                            color="#424F5C"
                                          >
                                            Titled Section
                                          </h2>
                                        </styled.h2>
                                      </Text>
                                      <Text
                                        color="#667380"
                                        isInline={false}
                                        tag="span"
                                        type="small"
                                      >
                                        <styled.span
                                          color="#667380"
                                          isInline={false}
                                          textType="small"
                                        >
                                          <span
                                            className="c12"
                                            color="#667380"
                                          >
                                            Titled Description
                                          </span>
                                        </styled.span>
                                      </Text>
                                    </div>
                                  </SectionDescription>
                                </Styled(SectionDescription)>
                              </div>
                            </Cell>
                            <Cell
                              size={
                                Object {
                                  "desktop": "shrink",
                                  "min": 12,
                                  "tablet": "shrink",
                                }
                              }
                            >
                              <div
                                className="ihrCell desktop-shrink tablet-shrink min-12"
                              >
                                <Button
                                  hasLegacyMargins={false}
                                  iconAlignment="left"
                                  key="1"
                                  type="primary"
                                >
                                  <button
                                    className="button primary"
                                    data-component-type="button"
                                  >
                                    Action 1
                                  </button>
                                </Button>
                                <Button
                                  hasLegacyMargins={false}
                                  iconAlignment="left"
                                  key="2"
                                  type="primary"
                                >
                                  <button
                                    className="button primary"
                                    data-component-type="button"
                                  >
                                    Action 2
                                  </button>
                                </Button>
                              </div>
                            </Cell>
                          </div>
                        </XYGrid>
                      </div>
                    </styled.div>
                  </div>
                </Cell>
                <Cell
                  size={
                    Object {
                      "min": 12,
                    }
                  }
                >
                  <div
                    className="ihrCell min-12"
                  >
                    <StyledTitledSectionBody>
                      <div
                        className="c13"
                      >
                        section 3
                      </div>
                    </StyledTitledSectionBody>
                  </div>
                </Cell>
              </div>
            </XYGrid>
          </div>
        </styled.div>
      </Styled(styled.div)>
    </TitledSection>
  </div>
</SectionList>
`;

exports[`<SectionList /> should render sectionList items with no children 1`] = `
.c6 {
  -webkit-transition: color .25s ease-out;
  transition: color .25s ease-out;
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c6,
.c6:link,
.c6:visited {
  color: #432DF3;
}

.c6:hover {
  color: #2512B3;
}

.c6:active {
  color: #0F0080;
}

.c4 {
  font-size: 18px;
  line-height: 24px;
  -webkit-letter-spacing: -.02em;
  -moz-letter-spacing: -.02em;
  -ms-letter-spacing: -.02em;
  letter-spacing: -.02em;
  color: #424F5C;
  font-weight: 600;
}

.c5 {
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #667380;
  font-weight: 400;
  display: block;
}

.c10 {
  font-size: 18px;
  line-height: 24px;
  -webkit-letter-spacing: -.02em;
  -moz-letter-spacing: -.02em;
  -ms-letter-spacing: -.02em;
  letter-spacing: -.02em;
  color: #424F5C;
  font-weight: 600;
}

.c11 {
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #667380;
  font-weight: 400;
  display: block;
}

@media only screen and (min-width:640px) {
  .c1 {
    border-bottom: 1px solid #E1E6EB;
  }

  .c1:last-child {
    border-bottom: 0;
  }
}

@media only screen and (max-width:639px) {
  .c0 {
    padding: 24px 16px;
  }
}

@media only screen and (min-width:640px) {
  .c0 {
    margin-left: 24px;
    margin-right: 24px;
    padding-top: 32px;
    padding-bottom: 32px;
  }
}

@media only screen and (max-width:639px) {
  .c3 {
    padding: 24px 16px;
  }
}

@media only screen and (min-width:640px) {
  .c3 {
    margin-right: 24px;
  }
}

@media only screen and (min-width:640px) {
  .c2 {
    margin-left: 24px;
    margin-right: 24px;
    padding-top: 32px;
    padding-bottom: 32px;
  }
}

@media only screen and (min-width:640px) {
  .c7 {
    margin-left: 24px;
    margin-right: 24px;
    padding-top: 32px;
    padding-bottom: 32px;
  }
}

@media only screen and (max-width:639px) {
  .c8 {
    padding: 24px 16px 12px;
  }
}

@media only screen and (max-width:639px) {
  .c9 {
    padding-bottom: 12px;
  }
}

@media only screen and (min-width:640px) {
  .c9 {
    margin-right: 24px;
  }
}

<SectionList>
  <div>
    <Styled(styled.div)>
      <styled.div
        className="c0"
      >
        <div
          className="c0 c1"
        />
      </styled.div>
    </Styled(styled.div)>
    <AnnotatedSection
      description="Annotated Description"
      header="Annotated Section"
      linkProps={
        Object {
          "href": "#",
        }
      }
      linkText="Annotated Link"
    >
      <Styled(styled.div)>
        <styled.div
          className="c2"
        >
          <div
            className="c2 c1"
          >
            <XYGrid
              gutterMarginX={false}
              gutterMarginY={false}
              gutterPaddingX={false}
              gutterPaddingY={false}
              vertical={false}
            >
              <div
                className="ihrGridX"
              >
                <Cell
                  size={
                    Object {
                      "desktop": 4,
                      "min": 12,
                      "tablet": 4,
                    }
                  }
                >
                  <div
                    className="ihrCell desktop-4 tablet-4 min-12"
                  >
                    <Styled(SectionDescription)
                      description="Annotated Description"
                      header="Annotated Section"
                      linkProps={
                        Object {
                          "href": "#",
                        }
                      }
                      linkText="Annotated Link"
                    >
                      <SectionDescription
                        className="c3"
                        description="Annotated Description"
                        header="Annotated Section"
                        linkProps={
                          Object {
                            "href": "#",
                          }
                        }
                        linkText="Annotated Link"
                      >
                        <div
                          className="c3"
                        >
                          <Text
                            color="#424F5C"
                            isInline={true}
                            tag="h2"
                            type="heading"
                          >
                            <styled.h2
                              color="#424F5C"
                              isInline={true}
                              textType="heading"
                            >
                              <h2
                                className="c4"
                                color="#424F5C"
                              >
                                Annotated Section
                              </h2>
                            </styled.h2>
                          </Text>
                          <Text
                            color="#667380"
                            isInline={false}
                            tag="span"
                            type="small"
                          >
                            <styled.span
                              color="#667380"
                              isInline={false}
                              textType="small"
                            >
                              <span
                                className="c5"
                                color="#667380"
                              >
                                Annotated Description
                              </span>
                            </styled.span>
                          </Text>
                          <TextLink
                            href="#"
                            textType="small"
                          >
                            <Component
                              className="c6"
                              href="#"
                              textType="small"
                            >
                              <Anchor
                                className="c6"
                                href="#"
                              >
                                <a
                                  className="c6"
                                  href="#"
                                >
                                  Annotated Link
                                </a>
                              </Anchor>
                            </Component>
                          </TextLink>
                        </div>
                      </SectionDescription>
                    </Styled(SectionDescription)>
                  </div>
                </Cell>
              </div>
            </XYGrid>
          </div>
        </styled.div>
      </Styled(styled.div)>
    </AnnotatedSection>
    <TitledSection
      actionItems={
        Array [
          <Button
            hasLegacyMargins={false}
            iconAlignment="left"
            type="primary"
          >
            Action 1
          </Button>,
          <Button
            hasLegacyMargins={false}
            iconAlignment="left"
            type="primary"
          >
            Action 2
          </Button>,
        ]
      }
      description="Titled Description"
      header="Titled Section"
    >
      <Styled(styled.div)>
        <styled.div
          className="c7"
        >
          <div
            className="c7 c1"
          >
            <XYGrid
              gutterMarginX={false}
              gutterMarginY={false}
              gutterPaddingX={false}
              gutterPaddingY={false}
              vertical={false}
            >
              <div
                className="ihrGridX"
              >
                <Cell
                  size={
                    Object {
                      "min": 12,
                    }
                  }
                >
                  <div
                    className="ihrCell min-12"
                  >
                    <styled.div>
                      <div
                        className="c8"
                      >
                        <XYGrid
                          gutterMarginX={false}
                          gutterMarginY={false}
                          gutterPaddingX={false}
                          gutterPaddingY={false}
                          vertical={false}
                          verticalAlignment="middle"
                        >
                          <div
                            className="ihrGridX align-middle"
                          >
                            <Cell
                              size={
                                Object {
                                  "desktop": "auto",
                                  "min": 12,
                                  "tablet": "auto",
                                }
                              }
                            >
                              <div
                                className="ihrCell desktop-auto tablet-auto min-12"
                              >
                                <Styled(SectionDescription)
                                  description="Titled Description"
                                  header="Titled Section"
                                >
                                  <SectionDescription
                                    className="c9"
                                    description="Titled Description"
                                    header="Titled Section"
                                  >
                                    <div
                                      className="c9"
                                    >
                                      <Text
                                        color="#424F5C"
                                        isInline={true}
                                        tag="h2"
                                        type="heading"
                                      >
                                        <styled.h2
                                          color="#424F5C"
                                          isInline={true}
                                          textType="heading"
                                        >
                                          <h2
                                            className="c10"
                                            color="#424F5C"
                                          >
                                            Titled Section
                                          </h2>
                                        </styled.h2>
                                      </Text>
                                      <Text
                                        color="#667380"
                                        isInline={false}
                                        tag="span"
                                        type="small"
                                      >
                                        <styled.span
                                          color="#667380"
                                          isInline={false}
                                          textType="small"
                                        >
                                          <span
                                            className="c11"
                                            color="#667380"
                                          >
                                            Titled Description
                                          </span>
                                        </styled.span>
                                      </Text>
                                    </div>
                                  </SectionDescription>
                                </Styled(SectionDescription)>
                              </div>
                            </Cell>
                            <Cell
                              size={
                                Object {
                                  "desktop": "shrink",
                                  "min": 12,
                                  "tablet": "shrink",
                                }
                              }
                            >
                              <div
                                className="ihrCell desktop-shrink tablet-shrink min-12"
                              >
                                <Button
                                  hasLegacyMargins={false}
                                  iconAlignment="left"
                                  key="1"
                                  type="primary"
                                >
                                  <button
                                    className="button primary"
                                    data-component-type="button"
                                  >
                                    Action 1
                                  </button>
                                </Button>
                                <Button
                                  hasLegacyMargins={false}
                                  iconAlignment="left"
                                  key="2"
                                  type="primary"
                                >
                                  <button
                                    className="button primary"
                                    data-component-type="button"
                                  >
                                    Action 2
                                  </button>
                                </Button>
                              </div>
                            </Cell>
                          </div>
                        </XYGrid>
                      </div>
                    </styled.div>
                  </div>
                </Cell>
              </div>
            </XYGrid>
          </div>
        </styled.div>
      </Styled(styled.div)>
    </TitledSection>
  </div>
</SectionList>
`;
